# owi-metadatabase-soil-sdk

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  invoke.yaml  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: index.md
docs/api/: index.md  processing.md  soil_api.md  visualization.md
docs/development/: namespace_packages.md
docs/getting-started/: installation.md  quickstart.md
src/owi/metadatabase/: __init__.py
src/owi/metadatabase/soil/: __init__.py  io.py
src/owi/metadatabase/soil/processing/: __init__.py  soil_pp.py
src/owi/metadatabase/soil/visualization/: __init__.py  soil_visualizer.py
tasks/: __init__.py  docs.py  quality.py  test.py
tests/soil/: conftest.py  test_io.py
tests/soil/processing/: test_soil_pp.py
