[project]
name = "owi-metadatabase-soil"
version = "0.1.1"
description = "Soil extension for OWI-metadatabase SDK"
authors = [
    { name = "Pietro D'Antuono", email = "pietro.dantuono@vub.be" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.15"

keywords = ["owi-metadatabase", "extension", "soil"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "owi-metadatabase>=0.1.0",
    "groundhog>=0.10.0, <=0.15.0",
    "pyproj>=3.6.0",
    "scipy>=1.13.0",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "docs"},
    {include-group = "dev-tools"},
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
]
lint = [
    "ruff>=0.12.9",
]
typing = [
    "ty>=0.0.14",
    "types-requests>=2.32.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]
dev-tools = [
    "invoke>=2.2.0",
    "pre-commit>=3.0.0",
]

[project.urls]
repository = "https://github.com/OWI-Lab/owi-metadatabase-soil"
documentation = "https://owi-lab.github.io/owi-metadatabase-soil/"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--import-mode=importlib",
    "--strict-markers",
    "--tb=short",
    "--cov=src/owi/metadatabase/soil",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--doctest-glob=*.md",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "NUMBER",
    "IGNORE_EXCEPTION_DETAIL",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["owi.metadatabase.soil"]

[tool.uv.workspace]
members = ["."]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.uv.sources]
owi-metadatabase = { index = "testpypi" }
